新增點心條功能(favor_feed & pet_cal)

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -127,7 +127,7 @@
                 
                 <!-- 提示訊息 -->
                 {% for message in messages %}
-                <div class="ts {{message.tags}} message">
+                <div class="ts {{message.tags}} dismissable message">
                     <button class="ts close button"></button>
                     <div class="header">{{ message }}</div>
                 </div>
