--- a/FeedPet/templates/pet/pet_detail.html
+++ b/FeedPet/templates/pet/pet_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block header %}
-
+<h2>寵物資訊</h2>
 {% endblock header %}
 
 {% block content %}
@@ -12,7 +12,6 @@
     <div class="seven wide column">
         <img class="ts medium image" src="{{ pet.image.url }}">
     </div>
-
     <div class="seven wide column">
         <table class="ts very basic table">
             <tbody>
@@ -46,11 +45,32 @@
                 </tr>
             </tbody>
         </table>
-
-        <button class="ts positive button" onclick="location.href='/mypet/update_pet_detail/{{pet.id}}'">
-            修改
-        </button>
+        <button class="ts button" onclick="location.href='/feed/feeding_record'">餵食紀錄</button>
+        <button class="ts positive button" onclick="location.href='/mypet/update_pet_detail/{{pet.id}}'">修改</button>
+        <button class="ts negative button" onclick="showDimmer_delpet()">刪除寵物</button>
     </div>
 </div>
+
+<!-- 彈跳訊息 -->
+<div class="ts modals dimmer">
+    <dialog id="closableModal_delpet" class="ts closable tiny modal">
+        <div class="content">
+            <p>
+                你確定要刪除『{{pet.petName}}』嗎？<br>
+                刪了就沒了喔！確定喔？<br>
+                再給你一次機會<br>
+            </p>
+        </div>
+        <div class="actions">
+            <button class="ts deny button">
+                別
+            </button>
+            <button class="ts negative button" onclick="location.href='/mypet/del_pet/{{pet.id}}'">
+                忍痛刪除
+            </button>
+        </div>
+    </dialog>
+</div>
+<!-- 彈跳訊息 -->
 
 {% endblock content %}
