--- a/FeedPet/templates/feed/feed_recommendation.html
+++ b/FeedPet/templates/feed/feed_recommendation.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load staticfiles %}
 
 {% block header %}
@@ -24,7 +25,7 @@
             <td>飼料一號</td>
             <td>營養品</td>
             <td>
-                <button class="ts button">   <a href="{% url 'feed:feed_detail' %}">詳細資訊</a> </button>            
+                <button class="ts button">   <a href="/feed/feed_list/feed_detail">詳細資訊</a> </button>
                  <button class="ts icon button"> <i class="heart icon"></i> </button>
                  
            </td>
@@ -35,7 +36,7 @@
             <td>飼料二號</td>
             <td>乾飼料</td>
             <td>
-                   <button class="ts button">   <a href="{% url 'feed:feed_detail' %}">詳細資訊</a> </button>      
+                   <button class="ts button">   <a href="/feed/feed_list/feed_detail">詳細資訊</a> </button>
                  <button class="ts icon button"> <i class="heart icon"></i> </button>
                  
            </td>
