hotel/view.py 新增list

--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -8,25 +8,26 @@
 {% block content %}
 <div class="ts grid">
     {% comment %} 旅館篩選條件 start {% endcomment %}
+   
     <div class="three wide column">
-    
         <div class="ts form">
              <div class="field">
+                   
                 <label>選擇地區</label>
                 <select>
-                    <option>大安區</option>
-                    <option>信義區</option>
-                    <option>松山區</option>
+                    {% for Hotel in unit %}   
+                    <option>{{Hotel.district}}</option>
+                    {% endfor %}
                 </select>
+                
             </div>
 
             <div class="field">
                 <label>選擇旅館評鑑</label>
                 <select>
-                    <option>特優</option>
-                    <option>甲等</option>
-                    <option>乙等</option>
-                       <option>丙等</option>
+                        {% for Hotel in unit1 %}   
+                        <option>{{Hotel.rank}}</option>
+                        {% endfor %}
                 </select>
             </div>
             <button class="ts button">送出</button>
@@ -37,17 +38,15 @@
     
     </div>
     {% comment %} 旅館篩選條件 end {% endcomment %}
-
+   
     {% comment %} 串接地圖api start {% endcomment %}
     <div class="thirteen wide column">
         {% comment %} 預計地圖放置位置之後可以把background-color的設定刪掉 {% endcomment %}
         <div class="ts embed" style="width:100%;height:400px;background-color:#223344" data-url="https://goo.gl/GKpzom" data-icon="map"></div>
-
         <button class="ts info labeled" data-tooltip-position="bottom center"
             data-tooltip="顯示該旅館資訊 旅館名稱 旅館地址 旅館聯絡方式">          
          <a href="{% url 'hotel:hotel_detail' %}">某個旅館</a> 
         </button>
-
     </div>
     {% comment %} 串接地圖api end {% endcomment %}    
 </div>
